--- a/LMS-M/education.html
+++ b/LMS-M/education.html
@@ -45,10 +45,9 @@
 		<!-- GNB START-->
 		<section class="gnbs">
 			<article class="container">
-				<div class="clearfix gnb-areas">
+				<div class="clearfix gnb-areas"">
 					<div class="g-logo" onclick="location.href='index.html'">
-						<img class="pe-1" src="assets/images/common/logo-oneline.svg">
-						<h5>원라인에듀</h5>
+						<img class="" src="assets/images/common/edu-logo.svg">
 					</div>
 					<!-- 웹 -->
 					<div class="g-menu">
@@ -93,15 +92,28 @@
 		<!-- LOGIN USER START -->
 		<section class="oz-mymenu2 mt-1">
 			<article class="container py-4">
-				<h4 class="text-white fw-bold">홍길동님 환영합니다.</h4>
-				<div class="text-white mt-1">
-					원라인에듀 홈페이지를 방문해주신 여러분을 진심으로 환영합니다.
+				<div class="row">
+					<div class="col-12 col-lg-9">
+						<h4 class="text-white fw-bold">홍길동님 환영합니다.</h4>
+						<div class="text-white mt-1">
+							원라인에듀 홈페이지를 방문해주신 여러분을 진심으로 환영합니다.
+						</div>
+					</div>
+					<div class="col-12 col-lg-3">
+						<div class="row g-2 g-lg-1 mt-2">
+							<div class="col-6 col-lg-7">
+								<button type="button" class="btn btn-outline-light w-100" data-bs-toggle="modal" data-bs-target="#findIdModal">개인정보 수정</button>
+							</div>
+							<div class="col-6 col-lg-5">
+								<button type="button" class="btn btn-outline-light w-100" data-bs-toggle="modal" data-bs-target="#findIdModal">로그아웃</button>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="summary mt-3">
 					<h5>수강완료:<span>1</span>개</h5>
 					<h5>진행(대기)중:<span>2</span>개</h5>
 				</div>
-
 				<div class="menus clearfix mt-4">
 					<div class="lefts">
 						<div class="my-charts" style="position:relative"> 
