--- a/LMS-M/guide_consignment.html
+++ b/LMS-M/guide_consignment.html
@@ -45,8 +45,7 @@
 			<article class="container">
 				<div class="clearfix gnb-areas">
 					<div class="g-logo" onclick="location.href='index.html'">
-						<img class="pe-1" src="assets/images/common/logo-oneline.svg">
-						<h5>원라인에듀</h5>
+						<img class="" src="assets/images/common/edu-logo.svg">
 					</div>
 					<!-- 웹 -->
 					<div class="g-menu">
