--- a/LMS-M/guide_refunds.html
+++ b/LMS-M/guide_refunds.html
@@ -22,7 +22,6 @@
 	<!-- visco css-->
 	<link href="assets/css/visco/education.css" rel="stylesheet" type="text/css" />
 	
-
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
@@ -37,11 +36,11 @@
 	<!-- apexcharts (반 도넛 차트) -->
 	<script src="assets/libs/apexcharts/apexcharts.min.js"></script>
 
-	<title>전체 > 직무교육 > 공지 </title>
+	<title>전체교육 > 환급절차 </title>
 </head>
 <body>
 	<main class="pb-9">
-		<!-- GNB START-->
+		<!-- NEW GNB START-->
 		<section class="gnbs">
 			<article class="container">
 				<div class="clearfix gnb-areas">
@@ -86,10 +85,10 @@
 				</div>
 			</article>
 		</section>
-      	<!-- GNB END-->
+		<!-- NEW GNB END-->
 
 		<!-- USER START -->
-		<section class="oz-mymenu2 mt-1">
+		<section class="oz-mymenu2">
 			<article class="container py-4">
 				<h4 class="text-white fw-bold">홍길동님 환영합니다.</h4>
 				<div class="text-white mt-1">
@@ -177,8 +176,7 @@
 					<i class="material-symbols-outlined pe-2">home</i>
 					<li class="breadcrumb-item">원라인에듀</li>
 					<li class="breadcrumb-item">전체교육</li>
-					<li class="breadcrumb-item">직무교육과정</li>
-					<li class="breadcrumb-item">마케팅</li>
+					<li class="breadcrumb-item">환급절차</li>
 				</ol>
 			</nav>
 		</section>
@@ -203,7 +201,7 @@
 						<p onclick = "location.href='education.html'">기업직업훈련카드</p>
 					</div>
 					<div class="s-manu">
-						<p class="on" onclick="location.href='guide_consignment.html'">
+						<p onclick="location.href='guide_consignment.html'">
 							위탁교육안내
 							<i class="material-symbols-outlined">book</i>
 						</p>
@@ -211,7 +209,7 @@
 							교육진행절차
 							<i class="material-symbols-outlined">play_lesson</i>
 						</p>
-						<p onclick = "location.href='guide_refunds.html'">
+						<p class="on" onclick = "location.href='guide_refunds.html'">
 							환급절차
 							<i class="material-symbols-outlined">auto_stories</i>
 						</p>
@@ -261,142 +259,84 @@
 					</div>
 				</div>
 				<!-- 본문컨텐츠 -->
-				<div class="col-lg-9 oa-bps">
-					<div class="row clearfix bps-su">
-						<p class="l-img"><img src="assets/images/common/@thum-06.png"></p>
-						<div class="su-r">
-							<h2>포스트 코로나 시대의 e비즈니스 인사이트</h2>
-							<div class="r-txts">
-								<p><span>차시</span>16차시</p>
-								<p><span>교육시간</span>28시간 37분</p>
-								<p><span>강사</span><a href="#a">오준석</a></p>
-							</div>
-							<div class="row g-1 r-bts">
-								<div class="col-12  col-md-4">
-									<button class="btn btn-lg btn-danger w-100" type="button">미리보기</button>
-								</div>
-								<div class="col-12  col-md-4">
-									<button class="btn btn-lg btn-muted w-100" type="button" data-bs-toggle="modal" data-bs-target=".consult-modal">신청하기</button>
-								</div>
-							</div>
+				<div class="col-lg-9 oa-cps">
+					<div class="cps-title">
+						<h2>환급절차</h2>
+						<p class="mt-1 text-primary">
+							고용보험에 가입되어 있는 사업장의 사업주가 재직근로자 등을 대상으로 직업훈련을 실시하는 경우 훈련비용 전액을 부담한 후, <br>교육을 수료한 근로자의 훈련비의 일부를 고용노동부로부터 지원받을 수 있는 제도입니다.
+						</p>
+					</div>
+					<div class="cps-cons">
+						<h6 class="text-info">환급절차</h6>
+						<div>
+							사업주는 훈련비 중 정부지원금을 제외한 자기부담금을 훈련기관에 납부하여 재직근로자 등을 대상으로 직업훈련을 실시하는 경우 고용노동부에서 훈련비 등을 지원합니다.
+							<img class="info-diagram dia-01 mt-3" src="assets/images/educate/img_diagram01.svg">
 						</div>
 					</div>
-					<ul class="nav nav-tabs row mt-5" role="tablist">
-						<li class="nav-item col">
-							<a class="nav-link active" data-bs-toggle="tab" role="tab">
-								강의소개
-							</a>
-						</li>
-						<li class="nav-item col">
-							<a class="nav-link" data-bs-toggle="tab" role="tab">
-								강의목차
-							</a>
-						</li>
-						<li class="nav-item col">
-							<a class="nav-link" data-bs-toggle="tab" role="tab">
-								학습공지
-							</a>
-						</li>
-						<li class="nav-item col">
-							<a class="nav-link" data-bs-toggle="tab" role="tab">
-								수강후기
-							</a>
-						</li>
-					</ul>
-					<div class="tab-content mt-4" id="tabContent">
-						<div class="bps-nots-view">
-							<div class="view-title">
-								<p><span class="badge bg-info">공통</span><span class="ms-2">2022-12-30 12:23</span></p>
-								<h4 class="mt-2">진도 적립에 장애가 있을 경우 대처방안</h4>
-							</div>
-							<div class="view-attach">
-								<a class="d-block my-1" href="#a">
-									<i class="material-symbols-outlined">description</i>
-									2022_교육데모_2021-00131_비용승인처리.zip
-								</a>
-								<a class="d-block my-1" href="#a">
-									<i class="material-symbols-outlined">description</i>
-									소녀시대.jpg
-								</a>
-							</div>
-							<div class="view-text">
-								진도 적립에 장애가 있을 경우 아래방법을 순서대로 진행해주세요.
-								<br/>
-								<br/>
-								1.Internet Explorer메뉴모음 -> [도구] -> [인터넷옵션]을 클릭<br/>
-								2.[개인정보]탭으로 이동 [고급]을 클릭<br/>
-								3.아래 이미지와 같이 항목을 설정<br/>
-								4.다시 학습을 진행<br/>
-								<br/>
-								<br/>
-								위와 같은 조치를 하고 동영상을 이미 다 학습 하였음에도 불구하고 계속 진도가 나가지 않는다면,
-								동영상 학습창의 화면 왼쪽 하단의 "List"명을 1~2초 간격을 두고 처음부터 차례대로 한 번씩 클릭하신 후 동영상 창을 닫고,
-								[NEXT]버튼을 눌러보시면 다음 단계로 이동 되시는 것을 확인 하실 수 있습니다.
-								<br/>
-								위와 같은 조치에도 불구하고 계속 진도가 나가지 않는다면 고객의 소리 또는 고객행복센터(1588-6559)로 문의 주세요.
-							</div>
-							<div class="view-bts mt-4">
-								<button type="button" class="btn px-4 btn-outline-body me-1">이전</button>
-								<button type="button" class="btn px-4 btn-outline-body">다음</button>
-
-								<button type="button" class="btn px-4 btn-primary float-end" onclick="location.href='education_detail.html'">목록으로</button>
-							</div>
-						</div>
-					</div>
+					<table class="cps-dure">
+						<tbody class="align-middle">
+							<tr>
+								<th class="text-center pt-3">환급대상</th>
+								<td class="text-left px-3">
+									각 과정별 수료기준을 충족한 수료자에 한함
+									<p class="text-danger">※ 통상 학습진도율 80% 이상, 평가 성적 60점 이상이나 과정별로 상이할 수 있음</p>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					
 				</div>
 			</div>
 		</article>
 		<!-- contents END-->
 	</main>
+	<!-- footer START -->
+	<footer class="oz-footer navbar-fixed-bottom">
+		<div class="container pt-3 pb-9">
+			<div class="row">
+				<!-- left -->
+				<div class="col-12 col-md-9">
+					<p class="fo-link h6">
+						<span class="pe-2 h-4"><a href="#a">개인정보 취급방침</a></span>
+						<span class="pe-2 h-4"><a href="#a">이용약관</a></span>
+						<span class="pe-2"><a href="#a">사업주지원교육 유의사항</a></span>
+						<span class="pe-2"><a href="#a">본인인증 안내</a></span>
+					</p>
+					<div class="fo-imgs mt-3 clearfix">
+						<img src="assets/images/common/fo-banner01.svg">
+						<img src="assets/images/common/fo-banner02.svg">
+						<img src="assets/images/common/fo-banner03.svg">
+					</div>
+				</div>
 
-<!-- footer START -->
-<footer class="oz-footer navbar-fixed-bottom">
-	<div class="container pt-3 pb-9">
-	<div class="row">
-		<!-- left -->
-		<div class="col-12 col-md-9">
-		<p class="fo-link h6">
-			<span class="pe-2 h-4"><a>개인정보 취급방침</a></span>
-			<span class="pe-2 h-4"><a>이용약관</a></span>
-			<span class="pe-2"><a>사업주지원교육 유의사항</a></span>
-			<span class="pe-2"><a>본인인증 안내</a></span>
-		</p>
-		<div class="fo-imgs mt-3 clearfix">
-			<img src="assets/images/common/fo-banner01.svg">
-			<img src="assets/images/common/fo-banner02.svg">
-			<img src="assets/images/common/fo-banner03.svg">
-		</div>
-		</div>
-
-		<!-- right -->
-		<div class="col-12  col-md-3">
-		<select class="form-select form-select-md" aria-label=".form-select-md example size 3">
-			
-			<option selected>관련사이트</option>
-			<option value="1">One</option>
-			<option value="2">Two</option>
-			<option value="3">Three</option>
-		</select>
-		<div class="row fo-url">
-			<div class="col-6 text-center">
-			<p class="cacao rounded">카카오톡 채널</p>
+				<!-- right -->
+				<div class="col-12  col-md-3">
+					<select class="form-select form-select-md" aria-label=".form-select-md example size 3">                    
+						<option selected>관련사이트</option>
+						<option value="1">One</option>
+						<option value="2">Two</option>
+						<option value="3">Three</option>
+					</select>
+					<div class="row fo-url">
+						<div class="col-6 text-center">
+							<p class="cacao rounded">카카오톡 채널</p>
+						</div>
+						<div class="col-6 text-center">
+							<p class="n-blog text-white rounded"><span class="fw-bolder">N</span> 블로그</p>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-6 text-center">
-			<p class="n-blog text-white rounded"><span class="fw-bolder">N</span> 블로그</p>
+			<div class="mt-3">
+				<p>
+					원라인에듀 | 대표 : 이주영 | 주소 : 서울 영등포구 선유로 130 에이스 하이테크시티3 705호 원라인에듀 <br />
+					TEL : 1811-0018,1811-0014 | FAX : 050-8094-0019 | 사업자등록번호 : 7978600772 <br />
+					통신판매번호 : 제 2021-서울영등포-0322호 <br />
+				</p>
+				ⓒ 원라인에듀 Allright & Reserved.
 			</div>
 		</div>
-		</div>
-	</div>
-	<div class="mt-3">
-		<p>
-		원라인에듀 | 대표 : 이주영 | 주소 : 서울 영등포구 선유로 130 에이스 하이테크시티3 705호 원라인에듀 <br />
-		TEL : 1811-0018,1811-0014 | FAX : 050-8094-0019 | 사업자등록번호 : 7978600772 <br />
-		통신판매번호 : 제 2021-서울영등포-0322호 <br />
-		</p>
-		ⓒ 원라인에듀 Allright & Reserved. ALLRIGHT & RESERVED.
-	</div>
-	</div>
-</footer>
-<!-- footer END -->    
+	</footer>
+	<!-- footer END -->
 </body>
 </html>
