--- a/LMS-M/index.html
+++ b/LMS-M/index.html
@@ -52,8 +52,7 @@
 			<article class="container">
 				<div class="clearfix">
 					<div class="g-logo" onclick="location.href='index.html'">
-						<img class="pe-1" src="assets/images/common/logo-oneline.svg">
-						<h5>원라인에듀</h5>
+						<img class="" src="assets/images/common/edu-logo.svg">
 					</div>
 					<!-- 웹 -->
 					<div class="g-menu">
@@ -194,7 +193,7 @@
 								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#findPwModal">비밀번호찾기</button>
 							</div>
 							<div class="col-4">
-								<button type="button" class="btn btn-outline-light">회원가입</button>
+								<button type="button" class="btn btn-outline-light" onclick="location.href='join_terms.html'">회원가입</button>
 							</div>
 						</div>
 
