--- a/LMS-M/education_detail.html
+++ b/LMS-M/education_detail.html
@@ -152,7 +152,7 @@
 							<i class="material-symbols-outlined">contact_mail</i>
 							<span>내 강의실</span>
 						</p>
-						<p class="btn btn-outline-light">
+						<p class="btn btn-outline-light" onclick="location.href='mypage.html'">
 							<i class="material-symbols-outlined">manage_search</i>
 							<span>마이페이지</span>
 						</p>
@@ -283,29 +283,29 @@
 					</div>
 					<ul class="nav nav-tabs row mt-5" role="tablist">
 						<li class="nav-item col">
-							<a class="nav-link active" data-bs-toggle="tab" href="#table" role="tab">
+							<a class="nav-link active" data-bs-toggle="tab" href="#edu-intro" role="tab">
 								강의소개
 							</a>
 						</li>
 						<li class="nav-item col">
-							<a class="nav-link" data-bs-toggle="tab" href="#description" role="tab">
+							<a class="nav-link" data-bs-toggle="tab" href="#edu-description" role="tab">
 								강의목차
 							</a>
 						</li>
 						<li class="nav-item col">
-							<a class="nav-link" data-bs-toggle="tab" href="#review" role="tab">
+							<a class="nav-link" data-bs-toggle="tab" href="#edu-review" role="tab">
 								학습공지
 							</a>
 						</li>
 						<li class="nav-item col">
-							<a class="nav-link" data-bs-toggle="tab" href="#transcript" role="tab">
+							<a class="nav-link" data-bs-toggle="tab" href="#edu-transcript" role="tab">
 								수강후기
 							</a>
 						</li>
 					</ul>
 					<div class="tab-content mt-4" id="tabContent">
 						<!--강의소개-->
-						<div class="tab-pane fade active show" id="table" role="tabpanel" aria-labelledby="table-tab">
+						<div class="tab-pane fade active show" id="edu-intro" role="tabpanel" aria-labelledby="table-tab">
 							<div class="pane-cons">
 								<h6 class="text-info">재생권장 인터넷 브라우저</h6>
 								<q>모든 인터넷 브라우저</q>
@@ -404,7 +404,7 @@
 							</div>
 						</div>
 						<!--강의목차-->
-						<div class="tab-pane fade" id="description" role="tabpanel" aria-labelledby="description-tab">
+						<div class="tab-pane fade" id="edu-description" role="tabpanel" aria-labelledby="description-tab">
 							<div class="bps-list">
 								<p><span>1차시</span>전략경영의 기초<span class="px-2 text-primary">00:10</span></p>
 								<p><span>1차시</span>경영 환경의 변화와 전략이론의 진화<span class="px-2 text-primary">00:10</span></p>
@@ -430,7 +430,7 @@
 							</div>
 						</div>
 						<!--공지-->
-						<div class="tab-pane fade" id="review" role="tabpanel" aria-labelledby="review-tab">
+						<div class="tab-pane fade" id="edu-review" role="tabpanel" aria-labelledby="review-tab">
 							<div class="bps-nots">
 								<div class="notebox" onclick="location.href='education_detail_notice.html'">
 									<p><span class="me-2 px-1 badge bg-info">공통</span>오류대응</p>
@@ -516,7 +516,7 @@
 							</div>
 						</div>
 						<!--수강후기-->
-						<div class="tab-pane fade" id="transcript" role="tabpanel" aria-labelledby="transcript-tab">
+						<div class="tab-pane fade" id="edu-transcript" role="tabpanel" aria-labelledby="transcript-tab">
 							<div class="bps-re">
 								<div class="rebox">
 									<p class="files"><img src="assets/images/common/@iu.png"></p>
