--- a/LMS-M/index.html
+++ b/LMS-M/index.html
@@ -391,30 +391,30 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="text-center row-sum">
-							<h2 class="text-primary">개인정보 보호 교육</h2>
-							<p class="text-muted mt-1">개인정보보호법 제28조</p>
-							<p class="h5 mt-3">개인정보처리자는 개인정보의 적정한 취급을 보장하기 위하여 개인정보취급자에게 정기적으로 필요한 교육을 실시하여야 한다.</p>
+					<div class="mt-2">
+						<div class="text-center imgs">
+							<img src="assets/images/common/icon-statute.svg">
+							<h3 class="text-info mt-3 fw-bold">개인정보 보호 교육</h3>
 						</div>
-					</div>
-					<div class="col-sm-8 mx-auto mt-3 row-sum">
-						<table class="text-center">
+						<table class="text-center mt-4">
 							<colgroup>
-								<col width="33%">
-								<col width="*">
-								<col width="33%">
+								<col width="25%">
+								<col width="25%">
+								<col width="25%">
+								<col width="25%">
 							</colgroup>
 							<thead>
 								<tr>
-									<th scope="col" class="bg-info text-white h5">교육 대상자</th>
-									<th scope="col" class="bg-info text-white h5">의무교육시간</th>
-									<th scope="col" class="bg-info text-white h5">과태료</th>
+									<th class="bg-info text-white">법령</th>
+									<th class="bg-info text-white">교육 대상자</th>
+									<th class="bg-info text-white bg-primary">의무교육시간</th>
+									<th class="bg-info text-white">과태료</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
-									<td>개인정보처리자 또는 관련 업에 종사하는 자</td>
+									<td>개인정보보호법 제28조</td>
+									<td>개인정보처리자 또는 관련업에 종사하는 자</td>
 									<td>연 1회 (60분 이상)</td>
 									<td>개인정보 관련 사고 발생시 최대 5억원</td>
 								</tr>
@@ -676,51 +676,50 @@
     
 	<!-- footer START -->
 	<footer class="oz-footer navbar-fixed-bottom">
-	<div class="container pt-3 pb-9">
-		<div class="row">
-		<!-- left -->
-		<div class="col-12 col-lg-9">
-			<p class="fo-link h6">
-			<span class="pe-2 h-4"><a href="#a">개인정보 취급방침</a></span>
-			<span class="pe-2 h-4"><a href="#a">이용약관</a></span>
-			<span class="pe-2"><a href="#a">사업주지원교육 유의사항</a></span>
-			<span class="pe-2"><a href="#a">본인인증 안내</a></span>
-			</p>
-			<div class="fo-imgs mt-3 clearfix">
-			<img src="assets/images/common/fo-banner01.svg">
-			<img src="assets/images/common/fo-banner02.svg">
-			<img src="assets/images/common/fo-banner03.svg">
+		<div class="container pt-3 pb-9">
+			<div class="row">
+				<!-- left -->
+				<div class="col-12 col-lg-9">
+					<p class="fo-link h6">
+						<span class="pe-2 h-4"><a href="#a">개인정보 취급방침</a></span>
+						<span class="pe-2 h-4"><a href="#a">이용약관</a></span>
+						<span class="pe-2"><a href="#a">사업주지원교육 유의사항</a></span>
+						<span class="pe-2"><a href="#a">본인인증 안내</a></span>
+					</p>
+					<div class="fo-imgs clearfix mt-3">
+						<img src="assets/images/common/fo-banner01.png">
+						<img src="assets/images/common/fo-banner02.png">
+						<img src="assets/images/common/fo-banner03.png">
+					</div>
+				</div>
+				<!-- right -->
+				<div class="col-12  col-lg-3">
+					<select class="form-select form-select-md" aria-label=".form-select-md example size 3">
+						<option selected>관련사이트</option>
+						<option value="1">One</option>
+						<option value="2">Two</option>
+						<option value="3">Three</option>
+					</select>
+					<div class="row fo-url">
+						<div class="col-6 text-center">
+							<p class="cacao rounded">카카오톡 채널</p>
+						</div>
+						<div class="col-6 text-center">
+							<p class="n-blog text-white rounded"><span class="fw-bolder">N</span> 블로그</p>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
-
-		<!-- right -->
-		<div class="col-12  col-lg-3">
-			<select class="form-select form-select-md" aria-label=".form-select-md example size 3">
+			<div class="fo-adds">
+				국가안전교육원 │ 대표 이사장:이형일 │ 개인정보관리책임자:이형우 | 사업자등록번호:176-82-00322 │ 원격평생교육시설:제1027호<br/>
+				주소:서울 영등포구 당산동2가 15-1, 101동 1105호<br/>
+				TEL:1811-0019 │ FAX:050-8094-0019<br/>
+				e-mail:safety0019@daum.net<br/>
+				<span class="d-block mt-2">ⓒ 국가안전교육원 Allright & Reserved.</span>
+			</div>
 			
-			<option selected>관련사이트</option>
-			<option value="1">One</option>
-			<option value="2">Two</option>
-			<option value="3">Three</option>
-			</select>
-			<div class="row fo-url">
-			<div class="col-6 text-center">
-				<p class="cacao rounded">카카오톡 채널</p>
-			</div>
-			<div class="col-6 text-center">
-				<p class="n-blog text-white rounded"><span class="fw-bolder">N</span> 블로그</p>
-			</div>
-			</div>
+			
 		</div>
-		</div>
-		<div class="mt-3">
-		<p>
-			원라인에듀 | 대표 : 이주영 | 주소 : 서울 영등포구 선유로 130 에이스 하이테크시티3 705호 원라인에듀 <br />
-			TEL : 1811-0018,1811-0014 | FAX : 050-8094-0019 | 사업자등록번호 : 7978600772 <br />
-			통신판매번호 : 제 2021-서울영등포-0322호 <br />
-		</p>
-		ⓒ 원라인에듀 Allright & Reserved.
-		</div>
-	</div>
 	</footer>
 	<!-- footer END -->
 	
