--- a/LMS-M/join_clear.html
+++ b/LMS-M/join_clear.html
@@ -182,7 +182,7 @@
 		<div class="modal-dialog modal-dialog-centered modal-mb">
 			<div class="modal-content">
 				<div class="modal-header mhc2">
-					<p>Sytem Message			<i class="material-symbols-outlined">close</i></p>
+					<p>약관			<i class="material-symbols-outlined">close</i></p>
 				</div>
 				<div class="modal-body mbc2">
 					<div class="mbc-cons">
@@ -201,7 +201,7 @@
 		<div class="modal-dialog modal-dialog-centered modal-mb">
 			<div class="modal-content">
 				<div class="modal-header mhc2">
-					<p>Sytem Message			<i class="material-symbols-outlined">close</i></p>
+					<p>인증			<i class="material-symbols-outlined">close</i></p>
 				</div>
 				<div class="modal-body mbc2">
 					<div class="mbc-cons">
