--- a/LMS-M/about_us.html
+++ b/LMS-M/about_us.html
@@ -40,6 +40,7 @@
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<!--google map JS-->
 	<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script-->
+	<script src="assets/js/vc_chart.js"></script>
 
 	<title>OA:About us</title>
 </head>
@@ -95,78 +96,44 @@
 		<!-- LOGIN USER START -->
 		<section class="oz-mymenu2 mt-1">
 			<article class="container py-4">
-				<h4 class="text-white fw-bold">홍길동님 환영합니다.</h4>
-				<div class="text-white mt-1">
-					원라인에듀 홈페이지를 방문해주신 여러분을 진심으로 환영합니다.
+				<div class="row">
+					<div class="col-12 col-lg-9">
+						<h4 class="text-white fw-bold">홍길동님 환영합니다.</h4>
+						<div class="text-white mt-1">
+							원라인에듀 홈페이지를 방문해주신 여러분을 진심으로 환영합니다.
+						</div>
+					</div>
+					<div class="col-12 col-lg-3">
+						<div class="row g-2 g-lg-1 mt-2">
+							<div class="col-6 col-lg-7">
+								<button type="button" class="btn btn-outline-light w-100" data-bs-toggle="modal" data-bs-target="#findIdModal">개인정보 수정</button>
+							</div>
+							<div class="col-6 col-lg-5">
+								<button type="button" class="btn btn-outline-light w-100" data-bs-toggle="modal" data-bs-target="#findIdModal">로그아웃</button>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="summary mt-3">
 					<h5>수강완료:<span>1</span>개</h5>
 					<h5>진행(대기)중:<span>2</span>개</h5>
 				</div>
-
-				<div class="menus clearfix mt-3">
+				<div class="menus clearfix mt-4">
 					<div class="lefts">
 						<div class="my-charts" style="position:relative"> 
 							<div id="chart" dir="ltr"></div>
 							<h6 style="color:#f4f4f4;position:absolute;left:50%;top:60%;transform:translate(-50%, -50%);">총진행율</h6>
 						</div>
-						<script type="text/javascript">
-							var options = {
-								series: [38],
-								colors: ['#42D8FF'],
-								chart: {
-									type: 'radialBar',
-									sparkline: {
-									enabled: true,
-									}
-								},
-								plotOptions: {
-									radialBar: {
-										startAngle: -90,
-										endAngle: 90,
-										dataLabels: {
-											name: {
-											show: false
-											},
-											value: {
-											offsetY: -2,
-											fontSize: '200%',
-											color: '#fff',
-											}
-										},
-										hollow: {
-										size: '100%',
-										},
-										track: {
-										show: true,
-										strokeWidth: '100%',
-										background: '#999',
-										opacity: .5,
-										margin: -20,
-										}
-									}
-								},
-							  };
-							  var chart = new ApexCharts(document.querySelector("#chart"), options);
-							  chart.render();
-						</script>
+						
 					</div>
 					<div class="rights">
 						<p class="btn btn-outline-light">
 							<i class="material-symbols-outlined">contact_mail</i>
 							<span>내 강의실</span>
 						</p>
-						<p class="btn btn-outline-light">
+						<p class="btn btn-outline-light" onclick="location.href='mypage.html'">
 							<i class="material-symbols-outlined">manage_search</i>
 							<span>마이페이지</span>
-						</p>
-						<p class="btn btn-outline-light">
-							<i class="material-symbols-outlined">clinical_notes</i>
-							<span>수료증</span>
-						</p>
-						<p class="btn btn-outline-light">
-							<i class="material-symbols-outlined">draft_orders</i>
-							<span>재응시</span>
 						</p>
 						<p class="btn btn-outline-light">
 							<i class="material-symbols-outlined">clinical_notes</i>
